add high level mailer

--- a/backend/api/Resources/EmailTemplates/UserOneTimePassword.cshtml
+++ b/backend/api/Resources/EmailTemplates/UserOneTimePassword.cshtml
@@ -1,4 +1,4 @@
-@model api.Modules.Email.DTO.UserRegistrationEmailDto
+@model api.Modules.Email.DTO.UserOneTimePasswordDto
 
 <!DOCTYPE html>
 <html>
@@ -43,16 +43,9 @@
     </div>
     <div class="content">
         <p>Hi there,</p>
-        <p>Thank you for registering with Kobo.gg. We're excited to have you on board!</p>
-        <p>Your account has been created with the email: <strong>@Model.Email</strong></p>
-        
-        @if (!string.IsNullOrEmpty(Model.VerificationLink))
-        {
-            <p>To verify your email address, please click the button below:</p>
-            <a href="@Model.VerificationLink" class="button">Verify Email</a>
-            <p>If the button doesn't work, copy and paste the following URL into your browser:</p>
-            <p>@Model.VerificationLink</p>
-        }
+        <p>Here's your One-Time-Password:</p>
+
+        <p><strong>@Model.Otp</strong></p>
         
         <p>If you have any questions, feel free to contact our support team.</p>
         <p>Best regards,<br />The Kobo.gg Team</p>
